# Lie-Algebra-Cohomology-Toolkit

./: .gitignore  BUILT_AND_ROADMAP.md  LICENSE  README.md  REFERENCES.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/profile/: README.md
configs/: default.yaml
configs/examples/: sage_cartan_example.yaml  se3_structure.json  sl2_structure.json  so3_structure.json  su3_structure.json
docs/: mathematical_foundations.md  physics_applications.md  quickstart.md  sagemath_integration.md
src/spectral_lie/: __init__.py  cli.py  cohomology_engine.py  config.py  io_handlers.py  metrics.py  model.py  physics_utils.py  registry.py  sage_backend.py  spectral_analyzer.py
tests/: test_cli.py  test_cohomology.py  test_sage_integration.py  test_spectral.py
